=======
CHANGES
=======

3.7.0 (unreleased)
------------------

- The PermissionsVocabulary and PermissionIdsVocabulary has been moved
  to the ``zope.security`` package. Backward-compatibility imports are
  provided.

- The registration of the "zope.Public" permission has been moved to
  ``zope.security``. Its configure.zcml is now included by this package.

- The ``LocalPermission`` class is now moved to new ``zope.localpermission``
  package. This package now only has backward-compatibility imports and browser
  views and menu items for ZMI.

- The browser views and menu item for ``LocalPermission`` was moved into a
  separate `browser/localpermission.zcml` file that is included by
  `browser/configure.zcml`. This adds a possibility to exclude ZMI-related
  configuration for local permissions.

3.6.2 (2009-03-10)
------------------

- The `Allow`, `Deny` and `Unset` permission settings was preferred to
  be imported from ``zope.securitypolicy.interfaces`` for a long time
  and now they are completely moved there from ``zope.app.security.settings``
  as well as the ``PermissionSetting`` class. The only thing left for
  backward compatibility is the import of Allow/Unset/Deny constants if
  ``zope.securitypolicy`` is installed to allow unpickling of security
  settings.

3.6.1 (2009-03-09)
------------------

- Depend on new ``zope.password`` package instead of ``zope.app.authentication``
  to get password managers for the authentication utility, thus remove
  dependency on ``zope.app.authentication``.

- Use template for AuthUtilitySearchView instead of ugly HTML
  constructing in the python code.

- Bug: The `sha` and `md5` modules has been deprecated in Python 2.6.
  Whenever the ZCML of this package was included when using Python 2.6,
  a deprecation warning had been raised stating that `md5` and `sha` have
  been deprecated. Provided a simple condition to check whether Python 2.6
  or later is installed by checking for the presense of `json` module