@@ -1,5 +1,5 @@
 [buildout]
-develop = . ../zope.localpermission ../zope.security
+develop = . ../zope.localpermission ../zope.security ../zope.publisher
 parts = test  coverage-test coverage-report
 
 [test]
